콕 찌르기 API 구현